# devilish-d20

./: .gitignore  Cargo.toml  README.md  srd.json
buffs/: double-ac.ket
help/: commands.txt  dmcommands.txt  help.txt  ketos.txt  source.txt
migrations/20170324190403_create_combatants/: down.sql  up.sql
migrations/20170406075356_buffs/: down.sql  up.sql
src/: import.rs  main.rs  models.rs  scripts.rs
